--- a/jupyter/yelp.ipynb
+++ b/jupyter/yelp.ipynb
@@ -9,13 +9,47 @@
     "from pymongo import MongoClient\n",
     "from datetime import datetime\n",
     "\n",
-    "client = MongoClient(\"mongodb://lookup:lookup@localhost:27017/\")"
+    "client = MongoClient(\"mongodb://lookup:lookup@172.18.0.2:27017/\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for db in client.list_databases():\n",
+    "    print(db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "a29fa33a7d01640a9e3216b457e7a1b85055507530f545f09e0d6ce3fe881559"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.8 64-bit (windows store)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.2"
   },
   "orig_nbformat": 4
  },
