--- a/jupyter/yelp.ipynb
+++ b/jupyter/yelp.ipynb
@@ -2,21 +2,63 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
+   "id": "a02f258f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pymongo in /opt/conda/lib/python3.9/site-packages (3.12.1)\n",
+      "Requirement already satisfied: yelpapi in /opt/conda/lib/python3.9/site-packages (2.4.0)\n",
+      "Requirement already satisfied: requests in /opt/conda/lib/python3.9/site-packages (from yelpapi) (2.26.0)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (1.26.7)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (2021.10.8)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (3.1)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (2.0.0)\n"
+     ]
+    }
+   ],
    "source": [
-    "from pymongo import MongoClient\n",
-    "from datetime import datetime\n",
-    "\n",
-    "client = MongoClient(\"mongodb://lookup:lookup@172.18.0.2:27017/\")"
+    "!pip install pymongo\n",
+    "!pip install yelpapi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
+   "id": "b2c0b22e",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from pymongo import MongoClient\n",
+    "from yelpapi import YelpAPI\n",
+    "from pprint import pprint\n",
+    "import pandas as pd\n",
+    "\n",
+    "# docker inspect -f \"{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}\" lookup-mongodb\n",
+    "\n",
+    "client = MongoClient(\"mongodb://lookup:lookup@mongodb:27017/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "0e3383c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'admin', 'sizeOnDisk': 102400, 'empty': False}\n",
+      "{'name': 'config', 'sizeOnDisk': 57344, 'empty': False}\n",
+      "{'name': 'local', 'sizeOnDisk': 73728, 'empty': False}\n",
+      "{'name': 'lookup', 'sizeOnDisk': 40960, 'empty': False}\n"
+     ]
+    }
+   ],
    "source": [
     "for db in client.list_databases():\n",
     "    print(db)"
@@ -24,18 +66,296 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "id": "9db6ddea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yelp_api = YelpAPI('H72x7JUBRJDCWI0SNmUpE1XVzhbmUmfFqBzatoBx4VuzQSd-9hiMcO61EALxNAFAPBhWCnHm0IYZDo5f950LdZ2Cr9v_LxUHWGNVAtTIDZRCmnQP2S6jKcskk86PYXYx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "3fc75b99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df__businesses = pd.DataFrame()\n",
+    "\n",
+    "list__businesses_documents = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "ff93bf57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "locations = [\n",
+    "    {\n",
+    "        \"key\": \"chicago\",\n",
+    "        \"value\": \"Chicago\",\n",
+    "        \"coordinates\": {\n",
+    "            \"lat\": 41.881832,\n",
+    "            \"lng\": -87.623177,\n",
+    "        },\n",
+    "    },\n",
+    "    {\n",
+    "        \"key\": \"new_york\",\n",
+    "        \"value\": \"New York\",\n",
+    "        \"coordinates\": {\n",
+    "            \"lat\": 40.73061,\n",
+    "            \"lng\": -73.935242,\n",
+    "        },\n",
+    "    },\n",
+    "    {\n",
+    "        \"key\": \"san_fransisco\",\n",
+    "        \"value\": \"San Fransisco\",\n",
+    "        \"coordinates\": {\n",
+    "            \"lat\": 37.773972,\n",
+    "            \"lng\": -122.431297,\n",
+    "        },\n",
+    "    },\n",
+    "    {\n",
+    "        \"key\": \"seattle\",\n",
+    "        \"value\": \"Seattle\",\n",
+    "        \"coordinates\": {\n",
+    "            \"lat\": 47.608013,\n",
+    "            \"lng\": -122.335167,\n",
+    "        },\n",
+    "    },\n",
+    "]\n",
+    "\n",
+    "business_ids = []\n",
+    "\n",
+    "for location in locations:\n",
+    "    for x in range(6):\n",
+    "        response = yelp_api.search_query(categories='homeservices', location=location['value'], limit=40, offset=(x*40))\n",
+    "\n",
+    "        for business in response['businesses']:\n",
+    "            business_ids.append(business[\"id\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "d1497f5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "960"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(business_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "a3a6241e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "list__businesses_documents = []\n",
+    "\n",
+    "for b_id in business_ids:\n",
+    "    try:\n",
+    "        response = yelp_api.business_query(id=b_id)\n",
+    "        list__businesses_documents.append(response)\n",
+    "    except Exception as e:\n",
+    "        time.sleep(0.5)\n",
+    "        response = yelp_api.business_query(id=b_id)\n",
+    "        list__businesses_documents.append(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "392796e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "960"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(list__businesses_documents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d80baa21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set([x for x in list__businesses_documents if list__businesses_documents[\"id\"].count(x) > 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "565ffa6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.InsertManyResult at 0x7f41b155d240>"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lookup_db = client[\"lookup\"]\n",
+    "collection = lookup_db[\"yelp_businesses\"]\n",
+    "collection.insert_many(list__businesses_documents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "3c7a9a55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df__reviews = pd.DataFrame()\n",
+    "list__review_documents = []\n",
+    "\n",
+    "for business in list__businesses_documents:\n",
+    "    response = yelp_api.reviews_query(id = business[\"id\"])\n",
+    "    df__reviews = df__reviews.append(pd.DataFrame(response['reviews']))\n",
+    "\n",
+    "    for review in response['reviews']:\n",
+    "        new_review = {**review, 'business_id': business[\"id\"]}\n",
+    "        list__review_documents.append(new_review)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "e2b440c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 'frZBPRPDLMu0rusYGMsdNw',\n",
+       "  'url': 'https://www.yelp.com/biz/new-city-moving-chicago?adjust_creative=5rK36kS-ykYpDmoue5MbZA&hrid=frZBPRPDLMu0rusYGMsdNw&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_reviews&utm_source=5rK36kS-ykYpDmoue5MbZA',\n",
+       "  'text': \"Used the NextDoor app to ask the community I'd be moving into if anyone had recommendations for a trustworthy moving company. I received nearly 100...\",\n",
+       "  'rating': 5,\n",
+       "  'time_created': '2021-07-14 13:03:07',\n",
+       "  'user': {'id': 'KLcZRKv0Ux5qNakAsYga_A',\n",
+       "   'profile_url': 'https://www.yelp.com/user_details?userid=KLcZRKv0Ux5qNakAsYga_A',\n",
+       "   'image_url': 'https://s3-media2.fl.yelpcdn.com/photo/qEDQk_9zRz55eev_0OWRrg/o.jpg',\n",
+       "   'name': 'Chad C.'},\n",
+       "  'business_id': 'fIWOQNq1AnoyWmiw012Xow'}]"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list__review_documents[0: 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "76ef6c96",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.InsertManyResult at 0x7f41b074bdc0>"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "collection = lookup_db[\"yelp_reviews\"]\n",
+    "collection.insert_many(list__review_documents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "b4a6017b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df__events = pd.DataFrame()\n",
+    "list__events_documents = []\n",
+    "\n",
+    "for location in locations:\n",
+    "    response = yelp_api.event_search_query(location=location['value'], limit=5, sort_on=\"popularity\", categories=[\"Music\", \"Kids & Family\", \"Festivals & Fairs\", \"Nightlife\"])\n",
+    "    df__events = df__events.append(pd.DataFrame(response['events']))\n",
+    "\n",
+    "    for event in response['events']:\n",
+    "        list__events_documents.append(event)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "04ecfdac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.InsertManyResult at 0x7f41b084ae00>"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "collection = lookup_db[\"yelp_events\"]\n",
+    "collection.insert_many(list__events_documents)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
+   "id": "bfe07c0e",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "a29fa33a7d01640a9e3216b457e7a1b85055507530f545f09e0d6ce3fe881559"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.8 64-bit (windows store)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -49,10 +369,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
-  },
-  "orig_nbformat": 4
+   "version": "3.9.7"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 5
 }
