--- a/jupyter/yelp.ipynb
+++ b/jupyter/yelp.ipynb
@@ -350,7 +350,46 @@
    "id": "bfe07c0e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "business_ids_deals = []\n",
+    "for location in locations:\n",
+    "    for x in range(6):\n",
+    "        response = yelp_api.search_query(categories='homeservices', attributes='deals', location=location['value'], limit=40, offset=(x*40))\n",
+    "        \n",
+    "        for business in response['businesses']:\n",
+    "            business_ids_deals.append(business[\"id\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7c20687",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "list__businesses_deals_documents = []\n",
+    "\n",
+    "for b_id in business_ids_deals:\n",
+    "    try:\n",
+    "        response = yelp_api.business_query(id=b_id)\n",
+    "        list__businesses_deals_documents.append(response)\n",
+    "    except Exception as e:\n",
+    "        time.sleep(0.5)\n",
+    "        response = yelp_api.business_query(id=b_id)\n",
+    "        list__businesses_deals_documents.append(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91367b49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collection = lookup_db[\"yelp_deals\"]\n",
+    "collection.insert_many(list__businesses_deals_documents)"
+   ]
   }
  ],
  "metadata": {
@@ -369,7 +408,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
