--- a/jupyter/yelp.ipynb
+++ b/jupyter/yelp.ipynb
@@ -390,6 +390,52 @@
     "collection = lookup_db[\"yelp_deals\"]\n",
     "collection.insert_many(list__businesses_deals_documents)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3dda850d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "\n",
+    "API_KEY='H72x7JUBRJDCWI0SNmUpE1XVzhbmUmfFqBzatoBx4VuzQSd-9hiMcO61EALxNAFAPBhWCnHm0IYZDo5f950LdZ2Cr9v_LxUHWGNVAtTIDZRCmnQP2S6jKcskk86PYXYx'\n",
+    "\n",
+    "headers = {'Authorization': 'Bearer {}'.format(API_KEY)}\n",
+    "categories_api_url = 'https://api.yelp.com/v3/categories'\n",
+    "\n",
+    "response = requests.get(categories_api_url, headers=headers, timeout=5)\n",
+    "jsonData = response.json()\n",
+    "\n",
+    "list__category_documents = []\n",
+    "aliasFilters = [\n",
+    "            \"carpenters\",\n",
+    "            \"electricians\",\n",
+    "            \"homecleaning\",\n",
+    "            \"painters\",\n",
+    "            \"plumbing\",\n",
+    "            \"hvac\",\n",
+    "            \"waterheaterinstallrepair\",\n",
+    "            \"blinds\",\n",
+    "        ]\n",
+    "\n",
+    "for category in jsonData['categories']:\n",
+    "    for alias in aliasFilters:\n",
+    "        if category['alias'] == alias:\n",
+    "            list__category_documents.append(category)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08ef108b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collection = lookup_db[\"yelp_categories\"]\n",
+    "collection.insert_many(list__category_documents)"
+   ]
   }
  ],
  "metadata": {
