--- a/jupyter/yelp.ipynb
+++ b/jupyter/yelp.ipynb
@@ -128,35 +128,25 @@
     "    },\n",
     "]\n",
     "\n",
+    "alias = [\n",
+    "    \"carpenters\",\n",
+    "    \"electricians\",\n",
+    "    \"homecleaning\",\n",
+    "    \"painters\",\n",
+    "    \"plumbing\",\n",
+    "    \"hvac\",\n",
+    "    \"waterheaterinstallrepair\",\n",
+    "    \"blinds\",\n",
+    "]\n",
+    "\n",
     "business_ids = []\n",
     "\n",
     "for location in locations:\n",
     "    for x in range(6):\n",
-    "        response = yelp_api.search_query(categories='homeservices', location=location['value'], limit=40, offset=(x*40))\n",
+    "        response = yelp_api.search_query(categories=alias, location=location['value'], limit=40, offset=(x*40))\n",
     "\n",
     "        for business in response['businesses']:\n",
     "            business_ids.append(business[\"id\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "d1497f5e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "960"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(business_ids)"
    ]
   },
   {
@@ -181,37 +171,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "392796e0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "960"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(list__businesses_documents)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "d80baa21",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# set([x for x in list__businesses_documents if list__businesses_documents[\"id\"].count(x) > 1])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 58,
    "id": "565ffa6b",
    "metadata": {},
@@ -231,6 +190,54 @@
     "lookup_db = client[\"lookup\"]\n",
     "collection = lookup_db[\"yelp_businesses\"]\n",
     "collection.insert_many(list__businesses_documents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76a38a50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "business_ids_deals = []\n",
+    "for location in locations:\n",
+    "    for x in range(6):\n",
+    "        response = yelp_api.search_query(categories=alias, attributes=['deals'], location=location['value'], limit=40, offset=(x*40))\n",
+    "        for business in response['businesses']:\n",
+    "            business_ids_deals.append(business[\"id\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3317a15a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "list__businesses_deals_documents = []\n",
+    "\n",
+    "for b_id in business_ids_deals:\n",
+    "    try:\n",
+    "        response = yelp_api.business_query(id=b_id)\n",
+    "        list__businesses_deals_documents.append(response)\n",
+    "    except Exception as e:\n",
+    "        time.sleep(0.5)\n",
+    "        response = yelp_api.business_query(id=b_id)\n",
+    "        list__businesses_deals_documents.append(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "681f7a44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lookup_db = client[\"lookup\"]\n",
+    "collection = lookup_db[\"yelp_deals\"]\n",
+    "collection.delete_many({})\n",
+    "collection.insert_many(list__businesses_deals_documents)"
    ]
   },
   {
@@ -347,53 +354,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfe07c0e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "business_ids_deals = []\n",
-    "for location in locations:\n",
-    "    for x in range(6):\n",
-    "        response = yelp_api.search_query(categories='homeservices', attributes='deals', location=location['value'], limit=40, offset=(x*40))\n",
-    "        \n",
-    "        for business in response['businesses']:\n",
-    "            business_ids_deals.append(business[\"id\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e7c20687",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import time\n",
-    "list__businesses_deals_documents = []\n",
-    "\n",
-    "for b_id in business_ids_deals:\n",
-    "    try:\n",
-    "        response = yelp_api.business_query(id=b_id)\n",
-    "        list__businesses_deals_documents.append(response)\n",
-    "    except Exception as e:\n",
-    "        time.sleep(0.5)\n",
-    "        response = yelp_api.business_query(id=b_id)\n",
-    "        list__businesses_deals_documents.append(response)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91367b49",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "collection = lookup_db[\"yelp_deals\"]\n",
-    "collection.insert_many(list__businesses_deals_documents)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "3dda850d",
    "metadata": {},
    "outputs": [],
@@ -409,20 +369,10 @@
     "jsonData = response.json()\n",
     "\n",
     "list__category_documents = []\n",
-    "aliasFilters = [\n",
-    "            \"carpenters\",\n",
-    "            \"electricians\",\n",
-    "            \"homecleaning\",\n",
-    "            \"painters\",\n",
-    "            \"plumbing\",\n",
-    "            \"hvac\",\n",
-    "            \"waterheaterinstallrepair\",\n",
-    "            \"blinds\",\n",
-    "        ]\n",
     "\n",
     "for category in jsonData['categories']:\n",
-    "    for alias in aliasFilters:\n",
-    "        if category['alias'] == alias:\n",
+    "    for al in alias:\n",
+    "        if category['alias'] == al:\n",
     "            list__category_documents.append(category)"
    ]
   },
