--- a/jupyter/yelp_business.ipynb
+++ b/jupyter/yelp_business.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "c7583ca9",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "d97bea36",
    "metadata": {},
    "outputs": [
@@ -65,9 +65,9 @@
      "output_type": "stream",
      "text": [
       "{'name': 'admin', 'sizeOnDisk': 102400, 'empty': False}\n",
-      "{'name': 'config', 'sizeOnDisk': 36864, 'empty': False}\n",
+      "{'name': 'config', 'sizeOnDisk': 110592, 'empty': False}\n",
       "{'name': 'local', 'sizeOnDisk': 81920, 'empty': False}\n",
-      "{'name': 'lookup', 'sizeOnDisk': 3657728, 'empty': False}\n"
+      "{'name': 'lookup', 'sizeOnDisk': 2379776, 'empty': False}\n"
      ]
     }
    ],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "d2cfbcfb",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "c8781a79",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "a2c3bff7",
    "metadata": {},
    "outputs": [],
@@ -307,17 +307,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "94c948c0",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time\n",
     "df__events = pd.DataFrame()\n",
     "list__events_documents = []\n",
     "\n",
     "for location in locations:\n",
     "    for x in range(6):\n",
-    "        response = yelp_api.event_search_query(location=location['value'], sort_on=\"popularity\", limit=40, offset=(x*40), categories=[\"music\", \"performing-arts\", \"sports-active-life\", \"nightlife\"])\n",
+    "        response = yelp_api.event_search_query(location=location['value'], sort_on=\"popularity\", start_date=int(time.time()), limit=40, offset=(x*40), categories=[\"music\", \"performing-arts\", \"sports-active-life\"])\n",
     "        df__events = df__events.append(pd.DataFrame(response['events']))\n",
     "\n",
     "        for event in response['events']:\n",
@@ -326,22 +327,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "2ae7fa7e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7efbd7761980>"
+       "<pymongo.results.InsertManyResult at 0x7f6e74383740>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "lookup_db = client[\"lookup\"]\n",
     "collection = lookup_db[\"yelp_events\"]\n",
     "collection.delete_many({})\n",
     "collection.insert_many(list__events_documents)"
