--- a/jupyter/yelp_business.ipynb
+++ b/jupyter/yelp_business.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "19c81c57",
    "metadata": {},
    "outputs": [
@@ -10,22 +10,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pymongo in /opt/conda/lib/python3.9/site-packages (3.12.1)\n",
-      "Requirement already satisfied: yelpapi in /opt/conda/lib/python3.9/site-packages (2.4.0)\n",
+      "Collecting pymongo\n",
+      "  Downloading pymongo-3.12.1-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (516 kB)\n",
+      "     |████████████████████████████████| 516 kB 3.6 MB/s            \n",
+      "\u001b[?25hInstalling collected packages: pymongo\n",
+      "Successfully installed pymongo-3.12.1\n",
+      "Collecting yelpapi\n",
+      "  Downloading yelpapi-2.4.0-py3-none-any.whl (7.1 kB)\n",
       "Requirement already satisfied: requests in /opt/conda/lib/python3.9/site-packages (from yelpapi) (2.26.0)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (1.26.7)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (3.1)\n",
-      "Requirement already satisfied: charset-normalizer~=2.0.0 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (2.0.0)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (2021.10.8)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (3.1)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (1.26.7)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (2.0.0)\n",
+      "Installing collected packages: yelpapi\n",
+      "Successfully installed yelpapi-2.4.0\n",
       "Collecting pandas\n",
       "  Downloading pandas-1.3.4-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (11.5 MB)\n",
-      "     |████████████████████████████████| 11.5 MB 4.6 MB/s            \n",
+      "     |████████████████████████████████| 11.5 MB 10.5 MB/s            \n",
       "\u001b[?25hRequirement already satisfied: pytz>=2017.3 in /opt/conda/lib/python3.9/site-packages (from pandas) (2021.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.7.3 in /opt/conda/lib/python3.9/site-packages (from pandas) (2.8.2)\n",
       "Collecting numpy>=1.17.3\n",
       "  Downloading numpy-1.21.4-cp39-cp39-manylinux_2_12_x86_64.manylinux2010_x86_64.whl (15.7 MB)\n",
-      "     |████████████████████████████████| 15.7 MB 2.8 MB/s            \n",
-      "\u001b[?25hRequirement already satisfied: six>=1.5 in /opt/conda/lib/python3.9/site-packages (from python-dateutil>=2.7.3->pandas) (1.16.0)\n",
+      "     |████████████████████████████████| 15.7 MB 3.4 MB/s            \n",
+      "\u001b[?25hRequirement already satisfied: python-dateutil>=2.7.3 in /opt/conda/lib/python3.9/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.9/site-packages (from python-dateutil>=2.7.3->pandas) (1.16.0)\n",
       "Installing collected packages: numpy, pandas\n",
       "Successfully installed numpy-1.21.4 pandas-1.3.4\n"
      ]
@@ -39,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c7583ca9",
    "metadata": {},
    "outputs": [],
@@ -56,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d97bea36",
    "metadata": {},
    "outputs": [
@@ -65,9 +72,8 @@
      "output_type": "stream",
      "text": [
       "{'name': 'admin', 'sizeOnDisk': 102400, 'empty': False}\n",
-      "{'name': 'config', 'sizeOnDisk': 110592, 'empty': False}\n",
-      "{'name': 'local', 'sizeOnDisk': 81920, 'empty': False}\n",
-      "{'name': 'lookup', 'sizeOnDisk': 2379776, 'empty': False}\n"
+      "{'name': 'config', 'sizeOnDisk': 73728, 'empty': False}\n",
+      "{'name': 'local', 'sizeOnDisk': 73728, 'empty': False}\n"
      ]
     }
    ],
@@ -78,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "d2cfbcfb",
    "metadata": {},
    "outputs": [],
@@ -88,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "c8781a79",
    "metadata": {},
    "outputs": [],
@@ -100,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "a2c3bff7",
    "metadata": {},
    "outputs": [],
@@ -163,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "b2f14887",
    "metadata": {},
    "outputs": [],
@@ -183,17 +189,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "5da10643",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7efbd7f2e400>"
+       "<pymongo.results.InsertManyResult at 0x7fde34984b80>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "d3c485eb",
    "metadata": {},
    "outputs": [],
@@ -222,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "64715b39",
    "metadata": {},
    "outputs": [],
@@ -241,17 +247,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "c082bcd4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7efbe4776440>"
+       "<pymongo.results.InsertManyResult at 0x7fde3494fa40>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "70cc591d",
    "metadata": {},
    "outputs": [],
@@ -284,17 +290,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "5e74bac4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7efbd74dc5c0>"
+       "<pymongo.results.InsertManyResult at 0x7fde27f09e80>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +340,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7f6e74383740>"
+       "<pymongo.results.InsertManyResult at 0x7fde27ffda40>"
       ]
      },
      "execution_count": 15,
@@ -351,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "e9a6fdeb",
    "metadata": {},
    "outputs": [],
@@ -376,17 +382,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "41348f30",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7efbd7755f40>"
+       "<pymongo.results.InsertManyResult at 0x7fde351bf9c0>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
