add neo4j and python script

--- a/jupyter/yelp_business.ipynb
+++ b/jupyter/yelp_business.ipynb
@@ -11,30 +11,24 @@
      "output_type": "stream",
      "text": [
       "Collecting pymongo\n",
-      "  Downloading pymongo-3.12.1-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (516 kB)\n",
-      "     |████████████████████████████████| 516 kB 3.6 MB/s            \n",
+      "  Downloading pymongo-4.0-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (459 kB)\n",
+      "     |████████████████████████████████| 459 kB 2.9 MB/s            \n",
       "\u001b[?25hInstalling collected packages: pymongo\n",
-      "Successfully installed pymongo-3.12.1\n",
+      "Successfully installed pymongo-4.0\n",
       "Collecting yelpapi\n",
       "  Downloading yelpapi-2.4.0-py3-none-any.whl (7.1 kB)\n",
       "Requirement already satisfied: requests in /opt/conda/lib/python3.9/site-packages (from yelpapi) (2.26.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (2021.10.8)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (3.1)\n",
       "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (1.26.7)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (3.1)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (2021.10.8)\n",
       "Requirement already satisfied: charset-normalizer~=2.0.0 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (2.0.0)\n",
       "Installing collected packages: yelpapi\n",
       "Successfully installed yelpapi-2.4.0\n",
-      "Collecting pandas\n",
-      "  Downloading pandas-1.3.4-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (11.5 MB)\n",
-      "     |████████████████████████████████| 11.5 MB 10.5 MB/s            \n",
-      "\u001b[?25hRequirement already satisfied: pytz>=2017.3 in /opt/conda/lib/python3.9/site-packages (from pandas) (2021.3)\n",
-      "Collecting numpy>=1.17.3\n",
-      "  Downloading numpy-1.21.4-cp39-cp39-manylinux_2_12_x86_64.manylinux2010_x86_64.whl (15.7 MB)\n",
-      "     |████████████████████████████████| 15.7 MB 3.4 MB/s            \n",
-      "\u001b[?25hRequirement already satisfied: python-dateutil>=2.7.3 in /opt/conda/lib/python3.9/site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.9/site-packages (from python-dateutil>=2.7.3->pandas) (1.16.0)\n",
-      "Installing collected packages: numpy, pandas\n",
-      "Successfully installed numpy-1.21.4 pandas-1.3.4\n"
+      "Requirement already satisfied: pandas in /opt/conda/lib/python3.9/site-packages (1.3.4)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in /opt/conda/lib/python3.9/site-packages (from pandas) (1.21.4)\n",
+      "Requirement already satisfied: pytz>=2017.3 in /opt/conda/lib/python3.9/site-packages (from pandas) (2021.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in /opt/conda/lib/python3.9/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.9/site-packages (from python-dateutil>=2.7.3->pandas) (1.16.0)\n"
      ]
     }
    ],
@@ -72,8 +66,9 @@
      "output_type": "stream",
      "text": [
       "{'name': 'admin', 'sizeOnDisk': 102400, 'empty': False}\n",
-      "{'name': 'config', 'sizeOnDisk': 73728, 'empty': False}\n",
-      "{'name': 'local', 'sizeOnDisk': 73728, 'empty': False}\n"
+      "{'name': 'config', 'sizeOnDisk': 110592, 'empty': False}\n",
+      "{'name': 'local', 'sizeOnDisk': 73728, 'empty': False}\n",
+      "{'name': 'lookup', 'sizeOnDisk': 1794048, 'empty': False}\n"
      ]
     }
    ],
@@ -196,7 +191,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7fde34984b80>"
+       "<pymongo.results.InsertManyResult at 0x7fe8bd8d7600>"
       ]
      },
      "execution_count": 8,
@@ -254,7 +249,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7fde3494fa40>"
+       "<pymongo.results.InsertManyResult at 0x7fe8bd4b4100>"
       ]
      },
      "execution_count": 11,
@@ -297,7 +292,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7fde27f09e80>"
+       "<pymongo.results.InsertManyResult at 0x7fe8bce8b6c0>"
       ]
      },
      "execution_count": 13,
@@ -340,7 +335,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7fde27ffda40>"
+       "<pymongo.results.InsertManyResult at 0x7fe8bd8e3540>"
       ]
      },
      "execution_count": 15,
@@ -389,7 +384,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7fde351bf9c0>"
+       "<pymongo.results.InsertManyResult at 0x7fe8bcf67380>"
       ]
      },
      "execution_count": 17,
