--- a/jupyter/py2neo.ipynb
+++ b/jupyter/py2neo.ipynb
@@ -2,10 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "f1a36b9f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: py2neo in /opt/conda/lib/python3.9/site-packages (2021.2.3)\n",
+      "Requirement already satisfied: certifi in /opt/conda/lib/python3.9/site-packages (from py2neo) (2021.10.8)\n",
+      "Requirement already satisfied: pygments>=2.0.0 in /opt/conda/lib/python3.9/site-packages (from py2neo) (2.10.0)\n",
+      "Requirement already satisfied: six>=1.15.0 in /opt/conda/lib/python3.9/site-packages (from py2neo) (1.16.0)\n",
+      "Requirement already satisfied: monotonic in /opt/conda/lib/python3.9/site-packages (from py2neo) (1.6)\n",
+      "Requirement already satisfied: pansi>=2020.7.3 in /opt/conda/lib/python3.9/site-packages (from py2neo) (2020.7.3)\n",
+      "Requirement already satisfied: urllib3 in /opt/conda/lib/python3.9/site-packages (from py2neo) (1.26.7)\n",
+      "Requirement already satisfied: packaging in /opt/conda/lib/python3.9/site-packages (from py2neo) (21.3)\n",
+      "Requirement already satisfied: interchange~=2021.0.4 in /opt/conda/lib/python3.9/site-packages (from py2neo) (2021.0.4)\n",
+      "Requirement already satisfied: pytz in /opt/conda/lib/python3.9/site-packages (from interchange~=2021.0.4->py2neo) (2021.3)\n",
+      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /opt/conda/lib/python3.9/site-packages (from packaging->py2neo) (3.0.6)\n",
+      "Requirement already satisfied: pandas in /opt/conda/lib/python3.9/site-packages (1.3.4)\n",
+      "Requirement already satisfied: pytz>=2017.3 in /opt/conda/lib/python3.9/site-packages (from pandas) (2021.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in /opt/conda/lib/python3.9/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in /opt/conda/lib/python3.9/site-packages (from pandas) (1.21.4)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.9/site-packages (from python-dateutil>=2.7.3->pandas) (1.16.0)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install py2neo\n",
     "!pip install pandas"
@@ -13,29 +36,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "d56a78c5",
    "metadata": {},
    "outputs": [],
    "source": [
     "from py2neo import Graph, Node, Relationship, NodeMatcher\n",
     "from py2neo.bulk import create_nodes\n",
+    "import pandas as pd\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "574798f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "graph = Graph(\"http://neo4j:7474/db/data/\", auth=(\"neo4j\", \"root\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "574798f0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "id": "2f9d469b",
    "metadata": {},
    "outputs": [],
@@ -45,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "id": "f3438828",
    "metadata": {},
    "outputs": [],
@@ -55,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "eb5509f7",
    "metadata": {},
    "outputs": [],
@@ -65,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "id": "cc881c11",
    "metadata": {},
    "outputs": [],
@@ -75,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "id": "106afefb",
    "metadata": {},
    "outputs": [],
@@ -85,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "id": "9e4b102c",
    "metadata": {},
    "outputs": [],
@@ -98,13 +122,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "id": "cc8d8d4a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "\n",
     "businesses = []\n",
     "with open('./data-export/mongo/yelp_businesses.json') as json_file:\n",
     "    businesses = json.load(json_file)"
@@ -112,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "id": "6ea492af",
    "metadata": {},
    "outputs": [],
@@ -136,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "id": "ebea72ca",
    "metadata": {},
    "outputs": [],
@@ -160,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "id": "0f8dbe47",
    "metadata": {},
    "outputs": [],
@@ -183,37 +205,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "id": "31063dac",
    "metadata": {},
    "outputs": [],
    "source": [
     "city_set = set()\n",
+    "zipcode_set = set()\n",
     "\n",
     "for business in businesses:\n",
     "    city = business[\"location\"][\"city\"]\n",
+    "    zipcode = business[\"location\"][\"zip_code\"]\n",
     "    \n",
     "    city_set.add(city)\n",
-    "    \n",
-    "for city in city_set:\n",
-    "    graph.create(Node(\"City\", city=city))"
+    "    zipcode_set.add(str(zipcode))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
+   "id": "74cab3af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for city in city_set:\n",
+    "#     graph.create(Node(\"City\", city=city))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "a036f3cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for zipcode in zipcode_set:\n",
+    "    graph.create(Node(\"Zipcode\", zipcode=zipcode))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "id": "b1c97ea7",
    "metadata": {},
    "outputs": [],
    "source": [
     "for business in businesses:\n",
-    "    city = business[\"location\"][\"city\"]\n",
+    "    zipcode = business[\"location\"][\"zip_code\"]\n",
     "    business_id = business[\"id\"]\n",
     "    for bid in business_ids:\n",
     "        if bid == business_id:\n",
     "            leftNode = matcher.match(\"Business\", id=business_id)\n",
     "            for left in leftNode:\n",
-    "                rightNode = matcher.match(\"City\", city=city)\n",
+    "                rightNode = matcher.match(\"Zipcode\", zipcode=zipcode)\n",
     "                for right in rightNode:\n",
     "                    relation = Relationship(left, \"Located In\", right)\n",
     "                    graph.create(relation)"
@@ -221,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "id": "85bcfc33",
    "metadata": {},
    "outputs": [],
@@ -233,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "id": "887167de",
    "metadata": {},
    "outputs": [],
@@ -255,17 +299,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 46,
    "id": "c1e17137",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for city in city_set:\n",
+    "# for city in city_set:\n",
+    "#     for event in events:\n",
+    "#         if city == event[\"location\"][\"city\"]:\n",
+    "#             leftNode = list(matcher.match(\"City\").where(\"_.city='\" + city + \"'\"))\n",
+    "#             for left in leftNode:\n",
+    "#                 rightNode = list(matcher.match(\"Event\").where(\"_.city='\" + city + \"'\"))\n",
+    "#                 for right in rightNode:\n",
+    "#                     relation = Relationship(left, \"Has\", right)\n",
+    "#                     graph.create(relation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "1ec54cd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for zipcode in zipcode_set:\n",
     "    for event in events:\n",
-    "        if city == event[\"location\"][\"city\"]:\n",
-    "            leftNode = list(matcher.match(\"City\").where(\"_.city='\" + city + \"'\"))\n",
+    "        if zipcode == event[\"location\"][\"zip_code\"]:\n",
+    "            leftNode = list(matcher.match(\"Zipcode\").where(\"_.zipcode='\" + zipcode + \"'\"))\n",
     "            for left in leftNode:\n",
-    "                rightNode = list(matcher.match(\"Event\").where(\"_.city='\" + city + \"'\"))\n",
+    "                rightNode = list(matcher.match(\"Event\").where(\"_.zipcode='\" + zipcode + \"'\"))\n",
     "                for right in rightNode:\n",
     "                    relation = Relationship(left, \"Has\", right)\n",
     "                    graph.create(relation)"
@@ -273,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "id": "3bf0f480",
    "metadata": {},
    "outputs": [],
@@ -285,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "id": "e4fd197b",
    "metadata": {},
    "outputs": [],
@@ -302,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 50,
    "id": "70e94b49",
    "metadata": {},
    "outputs": [],
