--- a/jupyter/yelp_business.ipynb
+++ b/jupyter/yelp_business.ipynb
@@ -12,23 +12,29 @@
      "text": [
       "Collecting pymongo\n",
       "  Downloading pymongo-4.0-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (459 kB)\n",
-      "     |████████████████████████████████| 459 kB 2.9 MB/s            \n",
+      "     |████████████████████████████████| 459 kB 96 kB/s            \n",
       "\u001b[?25hInstalling collected packages: pymongo\n",
       "Successfully installed pymongo-4.0\n",
       "Collecting yelpapi\n",
       "  Downloading yelpapi-2.4.0-py3-none-any.whl (7.1 kB)\n",
       "Requirement already satisfied: requests in /opt/conda/lib/python3.9/site-packages (from yelpapi) (2.26.0)\n",
       "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (1.26.7)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (3.1)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (2021.10.8)\n",
       "Requirement already satisfied: charset-normalizer~=2.0.0 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (2.0.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (2021.10.8)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (3.1)\n",
       "Installing collected packages: yelpapi\n",
       "Successfully installed yelpapi-2.4.0\n",
-      "Requirement already satisfied: pandas in /opt/conda/lib/python3.9/site-packages (1.3.4)\n",
-      "Requirement already satisfied: numpy>=1.17.3 in /opt/conda/lib/python3.9/site-packages (from pandas) (1.21.4)\n",
-      "Requirement already satisfied: pytz>=2017.3 in /opt/conda/lib/python3.9/site-packages (from pandas) (2021.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.7.3 in /opt/conda/lib/python3.9/site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.9/site-packages (from python-dateutil>=2.7.3->pandas) (1.16.0)\n"
+      "Collecting pandas\n",
+      "  Downloading pandas-1.3.4-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (11.5 MB)\n",
+      "     |████████████████████████████████| 11.5 MB 162 kB/s            \n",
+      "\u001b[?25hRequirement already satisfied: python-dateutil>=2.7.3 in /opt/conda/lib/python3.9/site-packages (from pandas) (2.8.2)\n",
+      "Collecting numpy>=1.17.3\n",
+      "  Downloading numpy-1.21.4-cp39-cp39-manylinux_2_12_x86_64.manylinux2010_x86_64.whl (15.7 MB)\n",
+      "     |████████████████████████████████| 15.7 MB 325 kB/s            \n",
+      "\u001b[?25hRequirement already satisfied: pytz>=2017.3 in /opt/conda/lib/python3.9/site-packages (from pandas) (2021.3)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.9/site-packages (from python-dateutil>=2.7.3->pandas) (1.16.0)\n",
+      "Installing collected packages: numpy, pandas\n",
+      "Successfully installed numpy-1.21.4 pandas-1.3.4\n"
      ]
     }
    ],
@@ -67,8 +73,8 @@
      "text": [
       "{'name': 'admin', 'sizeOnDisk': 102400, 'empty': False}\n",
       "{'name': 'config', 'sizeOnDisk': 110592, 'empty': False}\n",
-      "{'name': 'local', 'sizeOnDisk': 73728, 'empty': False}\n",
-      "{'name': 'lookup', 'sizeOnDisk': 1794048, 'empty': False}\n"
+      "{'name': 'local', 'sizeOnDisk': 81920, 'empty': False}\n",
+      "{'name': 'lookup', 'sizeOnDisk': 3485696, 'empty': False}\n"
      ]
     }
    ],
@@ -124,8 +130,8 @@
     "        },\n",
     "    },\n",
     "    {\n",
-    "        \"key\": \"san_fransisco\",\n",
-    "        \"value\": \"San Fransisco\",\n",
+    "        \"key\": \"san_francisco\",\n",
+    "        \"value\": \"San Francisco\",\n",
     "        \"coordinates\": {\n",
     "            \"lat\": 37.773972,\n",
     "            \"lng\": -122.431297,\n",
@@ -164,6 +170,84 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "id": "429372f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'alias': 'excalibur-water-heaters-san-francisco',\n",
+      " 'categories': [{'alias': 'waterheaterinstallrepair',\n",
+      "                 'title': 'Water Heater Installation/Repair'}],\n",
+      " 'coordinates': {'latitude': 37.74002, 'longitude': -122.43327},\n",
+      " 'display_phone': '(415) 725-5445',\n",
+      " 'hours': [{'hours_type': 'REGULAR',\n",
+      "            'is_open_now': False,\n",
+      "            'open': [{'day': 0,\n",
+      "                      'end': '1700',\n",
+      "                      'is_overnight': False,\n",
+      "                      'start': '0800'},\n",
+      "                     {'day': 1,\n",
+      "                      'end': '1700',\n",
+      "                      'is_overnight': False,\n",
+      "                      'start': '0800'},\n",
+      "                     {'day': 2,\n",
+      "                      'end': '1700',\n",
+      "                      'is_overnight': False,\n",
+      "                      'start': '0800'},\n",
+      "                     {'day': 3,\n",
+      "                      'end': '1700',\n",
+      "                      'is_overnight': False,\n",
+      "                      'start': '0800'},\n",
+      "                     {'day': 4,\n",
+      "                      'end': '1700',\n",
+      "                      'is_overnight': False,\n",
+      "                      'start': '0800'},\n",
+      "                     {'day': 5,\n",
+      "                      'end': '1700',\n",
+      "                      'is_overnight': False,\n",
+      "                      'start': '0800'}]}],\n",
+      " 'id': 'Kp6qJnoW0GsqZyAXGWGbUw',\n",
+      " 'image_url': 'https://s3-media2.fl.yelpcdn.com/bphoto/N_hm0qZkcmKMMhJdqe1DUQ/o.jpg',\n",
+      " 'is_claimed': True,\n",
+      " 'is_closed': False,\n",
+      " 'location': {'address1': '',\n",
+      "              'address2': None,\n",
+      "              'address3': '',\n",
+      "              'city': 'San Francisco',\n",
+      "              'country': 'US',\n",
+      "              'cross_streets': '',\n",
+      "              'display_address': ['San Francisco, CA 94131'],\n",
+      "              'state': 'CA',\n",
+      "              'zip_code': '94131'},\n",
+      " 'messaging': {'url': 'https://www.yelp.com/raq/Kp6qJnoW0GsqZyAXGWGbUw?adjust_creative=rwWC2JsYlwySUv--Mu1bDg&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_lookup&utm_source=rwWC2JsYlwySUv--Mu1bDg#popup%3Araq',\n",
+      "               'use_case_text': 'Request a Quote'},\n",
+      " 'name': 'Excalibur Water Heaters',\n",
+      " 'phone': '+14157255445',\n",
+      " 'photos': ['https://s3-media2.fl.yelpcdn.com/bphoto/N_hm0qZkcmKMMhJdqe1DUQ/o.jpg',\n",
+      "            'https://s3-media2.fl.yelpcdn.com/bphoto/CuysRFDu42o07u4_4aI8CQ/o.jpg',\n",
+      "            'https://s3-media3.fl.yelpcdn.com/bphoto/6zCpC79ITxIl9bfma9hv2A/o.jpg'],\n",
+      " 'rating': 5.0,\n",
+      " 'review_count': 381,\n",
+      " 'transactions': [],\n",
+      " 'url': 'https://www.yelp.com/biz/excalibur-water-heaters-san-francisco?adjust_creative=rwWC2JsYlwySUv--Mu1bDg&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_lookup&utm_source=rwWC2JsYlwySUv--Mu1bDg'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# r = yelp_api.search_query(categories=alias, location=\"San Fransisco\", limit=40)\n",
+    "\n",
+    "# print(r)\n",
+    "\n",
+    "# Kp6qJnoW0GsqZyAXGWGbUw\n",
+    "r = yelp_api.business_query(id=\"Kp6qJnoW0GsqZyAXGWGbUw\")\n",
+    "pprint(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "b2f14887",
    "metadata": {},
@@ -191,7 +275,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7fe8bd8d7600>"
+       "<pymongo.results.InsertManyResult at 0x7f3006050900>"
       ]
      },
      "execution_count": 8,
@@ -249,7 +333,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7fe8bd4b4100>"
+       "<pymongo.results.InsertManyResult at 0x7f3007105440>"
       ]
      },
      "execution_count": 11,
@@ -292,7 +376,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7fe8bce8b6c0>"
+       "<pymongo.results.InsertManyResult at 0x7f3005604480>"
       ]
      },
      "execution_count": 13,
@@ -335,7 +419,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7fe8bd8e3540>"
+       "<pymongo.results.InsertManyResult at 0x7f30068ecf00>"
       ]
      },
      "execution_count": 15,
@@ -384,7 +468,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7fe8bcf67380>"
+       "<pymongo.results.InsertManyResult at 0x7f30056edd40>"
       ]
      },
      "execution_count": 17,
