--- a/jupyter/py2neo.ipynb
+++ b/jupyter/py2neo.ipynb
@@ -1,35 +1,42 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "f1a36b9f",
+   "cell_type": "markdown",
+   "id": "f69da0f1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: py2neo in /opt/conda/lib/python3.9/site-packages (2021.2.3)\n",
-      "Requirement already satisfied: interchange~=2021.0.4 in /opt/conda/lib/python3.9/site-packages (from py2neo) (2021.0.4)\n",
-      "Requirement already satisfied: monotonic in /opt/conda/lib/python3.9/site-packages (from py2neo) (1.6)\n",
-      "Requirement already satisfied: pansi>=2020.7.3 in /opt/conda/lib/python3.9/site-packages (from py2neo) (2020.7.3)\n",
-      "Requirement already satisfied: pygments>=2.0.0 in /opt/conda/lib/python3.9/site-packages (from py2neo) (2.10.0)\n",
-      "Requirement already satisfied: six>=1.15.0 in /opt/conda/lib/python3.9/site-packages (from py2neo) (1.16.0)\n",
-      "Requirement already satisfied: packaging in /opt/conda/lib/python3.9/site-packages (from py2neo) (21.3)\n",
-      "Requirement already satisfied: certifi in /opt/conda/lib/python3.9/site-packages (from py2neo) (2021.10.8)\n",
-      "Requirement already satisfied: urllib3 in /opt/conda/lib/python3.9/site-packages (from py2neo) (1.26.7)\n",
-      "Requirement already satisfied: pytz in /opt/conda/lib/python3.9/site-packages (from interchange~=2021.0.4->py2neo) (2021.3)\n",
-      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /opt/conda/lib/python3.9/site-packages (from packaging->py2neo) (3.0.6)\n",
-      "Requirement already satisfied: pandas in /opt/conda/lib/python3.9/site-packages (1.3.4)\n",
-      "Requirement already satisfied: python-dateutil>=2.7.3 in /opt/conda/lib/python3.9/site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: numpy>=1.17.3 in /opt/conda/lib/python3.9/site-packages (from pandas) (1.21.4)\n",
-      "Requirement already satisfied: pytz>=2017.3 in /opt/conda/lib/python3.9/site-packages (from pandas) (2021.3)\n",
-      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.9/site-packages (from python-dateutil>=2.7.3->pandas) (1.16.0)\n"
-     ]
-    }
-   ],
    "source": [
+    "# Python Script for Neo4J"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "025485f7",
+   "metadata": {},
+   "source": [
+    "### This python script connects to Neo4j graph DB and creates Nodes and Relationships\n",
+    "\n",
+    "###### Nodes\n",
+    "1. User\n",
+    "2. Business\n",
+    "3. Review\n",
+    "4. Zipcode\n",
+    "5. Event\n",
+    "\n",
+    "##### Relationships\n",
+    "1. (:User) - [:`Requested Services From`] -> (:Business)\n",
+    "2. (:Business) - [:`Located In`] -> (:Zipcode)\n",
+    "3. (:Zipcode) - [:`Has`] -> (:Event)\n",
+    "4. (:User) - [:`Reviewed`] -> (:Business)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7d3d349",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install required dependencies\n",
     "!pip install py2neo\n",
     "!pip install pandas"
    ]
@@ -41,6 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import dependencies\n",
     "from py2neo import Graph, Node, Relationship, NodeMatcher\n",
     "from py2neo.bulk import create_nodes\n",
     "import pandas as pd\n",
@@ -54,13 +62,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Connect to Graph DB\n",
     "graph = Graph(\"http://neo4j:7474/db/data/\", auth=(\"neo4j\", \"root\"))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "634fb8d1",
+   "id": "5efe85d0",
    "metadata": {},
    "outputs": [
     {
@@ -78,6 +87,7 @@
     }
    ],
    "source": [
+    "# Delete all Nodes and Relationships of Graph DB\n",
     "graph.run(\"MATCH (a) DETACH DELETE a\")"
    ]
   },
@@ -88,6 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Convert the users data into pandas dataframe\n",
     "users_df = pd.read_csv('./data-export/pg/users', delimiter=\",\")  "
    ]
   },
@@ -98,6 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Convert records to dictionary\n",
     "users_dict = users_df.to_dict('records')"
    ]
   },
@@ -108,6 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create User Node\n",
     "create_nodes(graph.auto(), users_dict, labels={\"User\"})"
    ]
   },
@@ -118,6 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Convert the orders data into pandas dataframe\n",
     "orders_df = pd.read_csv('./data-export/pg/orders', delimiter=\",\") "
    ]
   },
@@ -128,6 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Convert records to dictionary\n",
     "orders_dict = orders_df.to_dict('records')"
    ]
   },
@@ -151,6 +166,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load yelp businesses \n",
+    "\n",
     "businesses = []\n",
     "with open('./data-export/mongo/yelp_businesses.json') as json_file:\n",
     "    businesses = json.load(json_file)"
@@ -163,6 +180,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create Business Nodes\n",
+    "\n",
     "for business in businesses:\n",
     "    for bid in business_ids:\n",
     "        if business[\"id\"] == bid:\n",
@@ -211,6 +230,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create Relationship [:`Requested Services From`] between User and Business\n",
+    "\n",
     "matcher = NodeMatcher(graph)\n",
     "\n",
     "for user in users:\n",
@@ -263,6 +284,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create Zipcode Nodes\n",
+    "\n",
     "for zipcode in zipcode_set:\n",
     "    graph.create(Node(\"Zipcode\", zipcode=zipcode))"
    ]
@@ -274,6 +297,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create Relationship[:`Located In`] between Business and Zipcode \n",
+    "\n",
     "for business in businesses:\n",
     "    zipcode = business[\"location\"][\"zip_code\"]\n",
     "    business_id = business[\"id\"]\n",
@@ -294,6 +319,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load Yelp Events data\n",
+    "\n",
     "events = []\n",
     "with open('./data-export/mongo/yelp_events.json') as json_file:\n",
     "    events = json.load(json_file)"
@@ -306,6 +333,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create Event Nodes\n",
+    "\n",
     "for event in events:\n",
     "    new_event = {\n",
     "        \"id\": event[\"id\"], \n",
@@ -346,6 +375,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create Relationship [: Has] between Zipcode and Event\n",
+    "\n",
     "for zipcode in zipcode_set:\n",
     "    for event in events:\n",
     "        if zipcode == event[\"location\"][\"zip_code\"]:\n",
@@ -364,6 +395,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load User Reviews data\n",
+    "\n",
     "reviews = []\n",
     "with open('./data-export/mongo/lookup_reviews.json') as json_file:\n",
     "    reviews = json.load(json_file)"
@@ -376,6 +409,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create Review Nodes\n",
+    "\n",
     "for review in reviews:\n",
     "    new_review = {\n",
     "        \"business_id\": review[\"business_id\"], \n",
@@ -393,6 +428,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create Relationship [:Reviewed] between User and Review\n",
+    "\n",
     "for user in users:\n",
     "    name = user[\"firstName\"] + \", \" + user[\"lastName\"]\n",
     "    for review in reviews:\n",
