twitter matches ui

--- a/jupyter/yelp_business.ipynb
+++ b/jupyter/yelp_business.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "19c81c57",
    "metadata": {},
    "outputs": [
@@ -33,16 +33,19 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: pymongo in /opt/conda/lib/python3.9/site-packages (4.0)\n",
-      "Requirement already satisfied: yelpapi in /opt/conda/lib/python3.9/site-packages (2.4.0)\n",
+      "Collecting yelpapi\n",
+      "  Downloading yelpapi-2.4.0-py3-none-any.whl (7.1 kB)\n",
       "Requirement already satisfied: requests in /opt/conda/lib/python3.9/site-packages (from yelpapi) (2.26.0)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (3.1)\n",
-      "Requirement already satisfied: charset-normalizer~=2.0.0 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (2.0.0)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (2021.10.8)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (2.0.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (3.1)\n",
       "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (1.26.7)\n",
+      "Installing collected packages: yelpapi\n",
+      "Successfully installed yelpapi-2.4.0\n",
       "Requirement already satisfied: pandas in /opt/conda/lib/python3.9/site-packages (1.3.4)\n",
       "Requirement already satisfied: python-dateutil>=2.7.3 in /opt/conda/lib/python3.9/site-packages (from pandas) (2.8.2)\n",
       "Requirement already satisfied: pytz>=2017.3 in /opt/conda/lib/python3.9/site-packages (from pandas) (2021.3)\n",
-      "Requirement already satisfied: numpy>=1.17.3 in /opt/conda/lib/python3.9/site-packages (from pandas) (1.21.4)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in /opt/conda/lib/python3.9/site-packages (from pandas) (1.20.3)\n",
       "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.9/site-packages (from python-dateutil>=2.7.3->pandas) (1.16.0)\n"
      ]
     }
@@ -57,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "c7583ca9",
    "metadata": {},
    "outputs": [],
@@ -129,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "d2cfbcfb",
    "metadata": {},
    "outputs": [],
@@ -151,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "a2c3bff7",
    "metadata": {},
    "outputs": [],
@@ -481,8 +484,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "1794cead",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'businesses': [],\n",
+       " 'total': 0,\n",
+       " 'region': {'center': {'longitude': -122.33551025390625,\n",
+       "   'latitude': 47.62541904760501}}}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yelp_api = YelpAPI(\"H72x7JUBRJDCWI0SNmUpE1XVzhbmUmfFqBzatoBx4VuzQSd-9hiMcO61EALxNAFAPBhWCnHm0IYZDo5f950LdZ2Cr9v_LxUHWGNVAtTIDZRCmnQP2S6jKcskk86PYXYx\")\n",
+    "resp = yelp_api.search_query(term=\"Home Services\", attributes=['hot_and_new'], location=\"seattle\", limit=40)\n",
+    "\n",
+    "resp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56217b4b",
    "metadata": {},
    "outputs": [],
    "source": []
